[gd_scene load_steps=13 format=3 uid="uid://heg310gps336"]

[ext_resource type="Script" path="res://gui/EndlessCanvas.gd" id="1_y0kqo"]
[ext_resource type="PackedScene" uid="uid://b4ife7qpjx4gw" path="res://gui/canvas/CanvasGizmos.tscn" id="2_506oc"]
[ext_resource type="ButtonGroup" uid="uid://qrhc1kujnngh" path="res://gui/canvas/editing_mode_button_group.tres" id="3_63ns4"]
[ext_resource type="PackedScene" uid="uid://cc6qxmnlw1a6s" path="res://gui/canvas/PropertiesDrawer.tscn" id="4_amokm"]

[sub_resource type="InputEventAction" id="InputEventAction_j11ko"]
action = &"grove_tool_layout"

[sub_resource type="Shortcut" id="Shortcut_s6cuc"]
events = [SubResource("InputEventAction_j11ko")]

[sub_resource type="InputEventAction" id="InputEventAction_fl4e5"]
action = &"grove_tool_styling"

[sub_resource type="Shortcut" id="Shortcut_iu1fv"]
events = [SubResource("InputEventAction_fl4e5")]

[sub_resource type="InputEventAction" id="InputEventAction_h3yaq"]
action = &"grove_tool_behavior"

[sub_resource type="Shortcut" id="Shortcut_rndw4"]
events = [SubResource("InputEventAction_h3yaq")]

[sub_resource type="InputEventAction" id="InputEventAction_l4rmj"]
action = &"grove_tool_animation"

[sub_resource type="Shortcut" id="Shortcut_mnwd1"]
events = [SubResource("InputEventAction_l4rmj")]

[node name="EndlessCanvas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0kqo")

[node name="CanvasElements" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasGizmos" parent="." instance=ExtResource("2_506oc")]
unique_name_in_owner = true
layout_mode = 1

[node name="CanvasOverlay" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"CanvasOverlay"

[node name="PropertiesDrawer" parent="CanvasOverlay" instance=ExtResource("4_amokm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="EditingModeButtons" type="HBoxContainer" parent="CanvasOverlay"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 0
theme_type_variation = &"EditingModeButtons"

[node name="DimensionalTools" type="Button" parent="CanvasOverlay/EditingModeButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_63ns4")
shortcut = SubResource("Shortcut_s6cuc")
text = "LT"

[node name="StylingTools" type="Button" parent="CanvasOverlay/EditingModeButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_63ns4")
shortcut = SubResource("Shortcut_iu1fv")
text = "ST"

[node name="BehaviorTool" type="Button" parent="CanvasOverlay/EditingModeButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_63ns4")
shortcut = SubResource("Shortcut_rndw4")
text = "BT"

[node name="AnimationTool" type="Button" parent="CanvasOverlay/EditingModeButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_63ns4")
shortcut = SubResource("Shortcut_mnwd1")
text = "AT"
